Home - full adaptive.

--- a/dest/index.html
+++ b/dest/index.html
@@ -88,16 +88,18 @@
       <section class="main" id="main">
         <div class="main__bg">
           <div class="main__bg-left"></div>
-          <div class="main__bg-right"><img src="./img/img-main-bg.png" srcset="./img/img-main-bg@2x.png 2x" alt="" title=""></div>
+          <div class="main__bg-right"><img src="./img/img-main-bg.png" srcset="./img/img-main-bg@2x.png 2x, ./img/img-main-bg@3x.png 3x" alt="" title=""></div>
         </div>
         <div class="c-grid">
           <div class="main__wrapper">
             <div class="main__wrapper-left">
-              <h1 class="main__title">WHERE DEEP SCIENCE MEETS BUSINESS</h1>
-              <p class="main__subtitle">Together, we help companies get smarter about the future impact of emerging technologies</p><a class="main__btn c-btn c-btn--bg" href="#" title="">PRE-REGISTER</a>
-              <p class="main__info">Applications open <span>12/02/2019</span></p>
-              <p class="main__from main__from-0">Open to PhDs, postdocs, academics and alumni from:</p>
-              <p class="main__from main__from-1">University College London | Imperial College London | University of Cambridge</p>
+              <h1 class="main__title">WHERE DEEP <span>SCIENCE MEETS</span> <span>BUSINESS</span></h1>
+              <p class="main__subtitle">Together, we help companies get <span>smarter about the future impact</span> <span>of emerging technologies</span></p>
+              <div><a class="main__btn c-btn c-btn--bg" href="#" title="">PRE-REGISTER</a>
+                <p class="main__info">Applications open <span>12/02/2019</span></p>
+                <p class="main__from main__from-0">Open to PhDs, postdocs, academics and alumni from:</p>
+                <p class="main__from main__from-1">University College London | Imperial College London | University of Cambridge</p>
+              </div>
             </div>
             <div class="main__wrapper-right"></div>
           </div>
@@ -157,7 +159,31 @@
         </div>
       </section>
       <!-- SECTION info :: END-->
-      <!--include components/home/_advantages-->
+      <!-- SECTION advantages :: START-->
+      <section class="advantages" id="advantages">
+        <div class="c-grid">
+          <div class="advantages__wrapper">
+            <div class="advantages__block-wrapper">
+              <div class="advantages__block advantages__block-0">
+                <p class="advantages__block-count viewport-hide-js"><span advantages-num-js data-count="100">100</span>+
+                </p>
+                <p class="advantages__block-desc">Projects</p>
+              </div>
+              <div class="advantages__block advantages__block-1">
+                <p class="advantages__block-count viewport-hide-js"><span advantages-num-js data-count="1000">1000</span>+
+                </p>
+                <p class="advantages__block-desc">Scientists</p>
+              </div>
+              <div class="advantages__block advantages__block-2">
+                <p class="advantages__block-count viewport-hide-js"><span advantages-num-js data-count="100000">100000</span>+
+                </p>
+                <p class="advantages__block-desc">Freelance hours</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION advantages :: END-->
       <!-- SECTION pre :: START-->
       <section class="pre" id="pre">
         <div class="c-grid">
