Points page - create main section - w\ adaptive.

--- a/dest/points.html
+++ b/dest/points.html
@@ -83,7 +83,23 @@
       </div>
     </header>
     <!-- HEADER :: END-->
-    <div class="body p-points"></div>
+    <div class="body body--start p-points">
+      <!-- SECTION main points :: START-->
+      <section class="p-main" id="p-main">
+        <div class="p-main__bg">
+          <div class="p-main__bg-left"></div>
+          <div class="p-main__bg-right"><img src="/img/img-points-main-bg.png" srcset="/img/img-points-main-bg@2x.png 2x, /img/img-points-main-bg@3x.png 3x" alt="" title=""></div>
+        </div>
+        <div class="c-grid">
+          <div class="p-main__wrapper">
+            <p class="p-main__badge">BETA</p>
+            <h1 class="p-main__title">AN INTRODUCTION TO POINTS AND RANKINGS</h1>
+            <p class="p-main__text">Associates earn points for engagement and for participating in paid client work. Points are intended to reward and showcase your efforts and engagement on the platform. If you participate in projects or improve the community experience, you’ll earn points.</p>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION main points :: END-->
+    </div>
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
       <div class="c-grid">
