--- a/dest/rankings.html
+++ b/dest/rankings.html
@@ -160,7 +160,11 @@
           </div>
         </div>
         <div class="rankings__wrapper rankings__wrapper-1">
-          <div class="c-grid"></div>
+          <div class="c-grid">
+            <!-- SECTION rankings table :: START-->
+            <div class="rankings__table"></div>
+            <!-- SECTION rankings table :: END-->
+          </div>
         </div>
       </section>
       <!-- SECTION rankings :: END-->
