--- a/dest/points.html
+++ b/dest/points.html
@@ -99,6 +99,126 @@
         </div>
       </section>
       <!-- SECTION main points :: END-->
+      <!-- SECTION benefits :: START-->
+      <section class="benefits" id="benefits">
+        <div class="c-grid">
+          <div class="benefits__wrapper">
+            <h2 class="benefits__title">What are the benefits of earning points?</h2>
+            <p class="benefits__text">The purpose of points is to give an indication of Associates’ participation and achievements on the platform. It is a way to encourage Associates to actively be involved in projects and community engagement, as well as rewarding Associates for their efforts.</p>
+            <div class="benefits__box-wrapper">
+              <div class="benefits__box benefits__box-1">
+                <div class="benefits__box-bg">
+                  <div class="benefits__box-bg--top"></div>
+                  <div class="benefits__box-bg--bottom"></div>
+                </div>
+                <div class="benefits__box-content">
+                  <div class="benefits__box-points"><span>200</span>points
+                  </div>
+                  <div class="benefits__box-circle">
+                    <svg class="icon-svg icon-benefits-1 ">
+                      <use xlink:href="./img/sprite.svg#benefits-1"></use>
+                    </svg>
+                  </div>
+                  <div class="benefits__box-desc">
+                    <p>Associates unlock the ability to request invitations to projects</p>
+                  </div>
+                </div>
+              </div>
+              <div class="benefits__box benefits__box-2">
+                <div class="benefits__box-bg">
+                  <div class="benefits__box-bg--top"></div>
+                  <div class="benefits__box-bg--bottom"></div>
+                </div>
+                <div class="benefits__box-content">
+                  <div class="benefits__box-points"><span>1,000</span>points
+                  </div>
+                  <div class="benefits__box-circle">
+                    <svg class="icon-svg icon-benefits-2 ">
+                      <use xlink:href="./img/sprite.svg#benefits-2"></use>
+                    </svg>
+                  </div>
+                  <div class="benefits__box-desc">
+                    <p>Associates are entered onto the Associate Leaderboard</p>
+                  </div>
+                </div>
+              </div>
+              <div class="benefits__box benefits__box-3">
+                <div class="benefits__box-bg">
+                  <div class="benefits__box-bg--top"></div>
+                  <div class="benefits__box-bg--bottom"></div>
+                </div>
+                <div class="benefits__box-content">
+                  <div class="benefits__box-points"><span>2,000</span>points
+                  </div>
+                  <div class="benefits__box-circle">
+                    <svg class="icon-svg icon-benefits-3 ">
+                      <use xlink:href="./img/sprite.svg#benefits-3"></use>
+                    </svg>
+                  </div>
+                  <div class="benefits__box-desc">
+                    <p>Associates can nominate up to 5 colleagues to join the platform, each successful referral worth £15</p>
+                  </div>
+                </div>
+              </div>
+              <div class="benefits__box benefits__box-4">
+                <div class="benefits__box-bg">
+                  <div class="benefits__box-bg--top"></div>
+                  <div class="benefits__box-bg--bottom"></div>
+                </div>
+                <div class="benefits__box-content">
+                  <div class="benefits__box-points"><span>5,000</span>points
+                  </div>
+                  <div class="benefits__box-circle">
+                    <svg class="icon-svg icon-benefits-4 ">
+                      <use xlink:href="./img/sprite.svg#benefits-4"></use>
+                    </svg>
+                  </div>
+                  <div class="benefits__box-desc">
+                    <p>Associates can request a written reference from us here at Outsmart Insight</p>
+                  </div>
+                </div>
+              </div>
+              <div class="benefits__box benefits__box-5">
+                <div class="benefits__box-bg">
+                  <div class="benefits__box-bg--top"></div>
+                  <div class="benefits__box-bg--bottom"></div>
+                </div>
+                <div class="benefits__box-content">
+                  <div class="benefits__box-points"><span>10,000</span>points
+                  </div>
+                  <div class="benefits__box-circle">
+                    <svg class="icon-svg icon-benefits-5 ">
+                      <use xlink:href="./img/sprite.svg#benefits-5"></use>
+                    </svg>
+                  </div>
+                  <div class="benefits__box-desc">
+                    <p>Associates unlock a 1.2x fee surge valid for all earnings from client projects</p>
+                  </div>
+                </div>
+              </div>
+              <div class="benefits__box benefits__box-6">
+                <div class="benefits__box-bg">
+                  <div class="benefits__box-bg--top"></div>
+                  <div class="benefits__box-bg--bottom"></div>
+                </div>
+                <div class="benefits__box-content">
+                  <div class="benefits__box-points"><span>20,000</span>points
+                  </div>
+                  <div class="benefits__box-circle">
+                    <svg class="icon-svg icon-benefits-6 ">
+                      <use xlink:href="./img/sprite.svg#benefits-6"></use>
+                    </svg>
+                  </div>
+                  <div class="benefits__box-desc">
+                    <p>Speak to a member of our alumni network about your dream job, the inside track on how to get it, and what it's like to work there</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION benefits :: END-->
     </div>
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
