--- a/dest/points.html
+++ b/dest/points.html
@@ -99,6 +99,49 @@
         </div>
       </section>
       <!-- SECTION main points :: END-->
+      <!-- SECTION calculate :: START-->
+      <section class="calculate" id="calculate">
+        <div class="calculate__wrapper calculate__wrapper-0">
+          <div class="calculate__bg">
+            <div class="calculate__bg-left"></div>
+            <div class="calculate__bg-right"><img src="/img/img-calculate-0.png" srcset="/img/img-calculate-0@2x.png 2x, /img/img-calculate-0@3x.png 3x" alt="" title=""></div>
+          </div>
+          <div class="c-grid">
+            <div class="calculate__row">
+              <div class="calculate__row-left">
+                <h3 class="calculate__title">How are points calculated?</h3>
+                <p class="calculate__desc calculate__desc--pb">For any activity other than paid client projects, the points that Associates earn are pre-determined. For example, if you fully complete your profile, you earn 150 points. For paid client projects, we use an algorithm to convert the fees you earn into points.</p>
+                <p class="calculate__desc">Your Associate points can also decrease when you do not participate in projects or engage with the platform for a long time. Hence, the more you participate, the higher your score will get.</p>
+              </div>
+              <div class="calculate__row-right"></div>
+            </div>
+          </div>
+        </div>
+        <div class="calculate__wrapper calculate__wrapper-1">
+          <div class="c-grid">
+            <div class="calculate__row">
+              <div class="calculate__row-left"><img src="/img/img-calculate-1.png" srcset="/img/img-calculate-1@2x.png 2x, /img/img-calculate-1@3x.png 3x" alt="" title=""></div>
+              <div class="calculate__row-right">
+                <h3 class="calculate__title">What is the purpose of points?</h3>
+                <p class="calculate__desc">The purpose of points is to give an indication of Associates’ participation and achievements on the platform. It is a way to encourage Associates to actively be involved in projects and community engagement, as well as rewarding Associates for their efforts.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="calculate__wrapper calculate__wrapper-2">
+          <div class="c-grid">
+            <div class="calculate__row">
+              <div class="calculate__row-left">
+                <h3 class="calculate__title">What does ranking mean?</h3>
+                <p class="calculate__desc calculate__desc--pb">Associates with over 1000 points are featured on the leaderboard.</p>
+                <p class="calculate__desc">The Associate leaderboard displays the top-performing Associates based on the points that they have earned and is updated monthly. Your ranking is your relative position on the leaderboard. The more points you earn, the higher in the leaderboard you climb and the higher your ranking.</p>
+              </div>
+              <div class="calculate__row-right"><img src="/img/img-calculate-3.png" srcset="/img/img-calculate-3@2x.png 2x, /img/img-calculate-3@3x.png 3x" alt="" title=""></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION calculate :: END-->
       <!-- SECTION benefits :: START-->
       <section class="benefits" id="benefits">
         <div class="c-grid">
